<resources>
    <string name="app_name">TGI Diabetes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Página Inicial</string>
    <string name="menu_personal_data">Dados pessoais</string>
    <string name="menu_contacts">Contatos</string>
    <string name="menu_prediction">Predição</string>
    <string name="save">Salvar</string>
    <string name="your_name">Digite seu nome</string>
    <string name="validation_user_name">Informe seu nome.</string>
    <string name="personal_data">Dados pessoais</string>
    <string name="name">Nome*</string>
    <string name="contact_form_title">Dados do contato</string>
    <string name="hint_name">Digite o nome</string>
    <string name="hint_ddd">00</string>
    <string name="hint_cell">0 0000 0000</string>
    <string name="cell">Celular*</string>
    <string name="main">Contato principal</string>
    <string name="send_message">Enviar mensagem</string>
    <string name="send_localization">Enviar localização</string>
    <string name="hint_message_text">Digite uma mensagem (opcional)</string>
    <string name="sound_alert">Alerta sonoro</string>
    <string name="message">Mensagem</string>
    <string name="localization">Localização</string>
    <string name="no_contacts_home">Você ainda não possui contatos ativos. Clique no botão abaixo para adicionar um novo ou vá para a página de contatos para gerenciar os existentes.</string>
    <string name="no_contacts">Você ainda não possui contatos. Clique no botão abaixo para adicionar um novo.</string>
    <string name="add_contact">Adicionar contato</string>
    <string name="contact_activaded">Contato ativado! Agora este contato aparecerá na tela inicial</string>
    <string name="contact_inactivaded">Contato inativado! Este contato não aparecerá mais na tela inicial</string>
    <string name="personal_data_form_title">Dados Pessoais</string>
    <string name="age">Idade*</string>
    <string name="sexo">Sexo*</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="pregnancies">Nº Gravidezes</string>
    <string name="weight">Peso*</string>
    <string name="height">Altura*</string>
    <string name="bmi">IMC</string>
    <string name="glucose">Glicose*</string>
    <string name="insulin">Insulina*</string>
    <string name="blood_pressure">Pressão Diastólica*</string>
    <string name="skin_thickness">Textura da Pele*</string>
    <string name="diabetes_pedigree">Diabetes Pedigree*</string>
    <string name="fill_later">Preencher depois</string>
    <string name="positive_test">De acordo com os dados informados, você tem tendência a ter ou tem diabetes.</string>
    <string name="negative_test">De acordo com os dados informados, você não tem tendência a ter diabetes.</string>
    <string name="edit_data">Editar Dados</string>
    <string name="do_test">Realizar Teste</string>
    <string name="family_history">Histórico familiar*</string>

    <string-array name="values_family_history">
        <item>Sem histórico familiar</item>
        <item>Mãe possui diabetes tipo 1</item>
        <item>Um dos irmãos possui diabetes tipo 1</item>
        <item>Pai possui diabetes tipo 1</item>
        <item>Ambos os pais possuem diabetes tipo 1</item>
        <item>Irmão gêmeo idêntico possui diabetes tipo 1</item>
        <item>Algum parente próximo possui diabetes tipo 2</item>
    </string-array>
</resources>