<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.faculdade.tgi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_personal_data"
        android:name="com.faculdade.tgi.ui.personaldata.PersonalDataFragment"
        android:label="@string/menu_personal_data"
        tools:layout="@layout/fragment_personal_data" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.faculdade.tgi.ui.contacts.ContactsFragment"
        android:label="@string/menu_contacts"
        tools:layout="@layout/fragment_contacts" />

    <fragment
        android:id="@+id/nav_prediction"
        android:name="com.faculdade.tgi.ui.prediction.PredictionFragment"
        android:label="@string/menu_prediction"
        tools:layout="@layout/fragment_prediction" />
</navigation>