<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_contact"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/contact_block_background"
        android:padding="8dp">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nome"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/image_star"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_star"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/yellow"
            android:tooltipText="@string/main"/>

        <TextView
            android:id="@+id/text_cell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Celular"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            android:textColor="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/text_cell"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/gray"/>

        <Switch
            android:id="@+id/switch_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/message"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_cell"
            android:clickable="false"
            android:longClickable="false"/>

        <Switch
            android:id="@+id/switch_localization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"
            android:text="@string/localization"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switch_message"
            android:clickable="false"
            android:longClickable="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>